[metadata]
name = ironic-asgard-driver
summary = Asgard Driver for Ironic
description-file = README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://github.com/ikalnitsky/ironic-asgard-driver
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    ironic_asgard_driver

[entry_points]
ironic.drivers =
    asgard = ironic_asgard_driver.driver:AsgardDriver
    asgard_ansible_ipmi = ironic_asgard_driver.driver:AsgardAnsibleAndIPMIDriver
    asgard_ansible_fake = ironic_asgard_driver.driver:AsgardAnsibleAndFakeDriver

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = ironic_asgard_driver/locale
domain = ironic-asgard-driver

[update_catalog]
domain = ironic-asgard-driver
output_dir = ironic_asgard_driver/locale
input_file = ironic_asgard_driver/locale/ironic-asgard-driver.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = ironic_asgard_driver/locale/ironic-asgard-driver.pot
